<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/input1"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/textInput1" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/input2"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/textInput2" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/input3"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/textInput3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/total_spend"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_total_value"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/total_value"
            android:textColor="@color/purple_700"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="#54A956"
            android:text="@string/calculate"
            android:textSize="24sp" />


    </LinearLayout>


</LinearLayout>